--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en" class="layout-pf layout-pf-fixed">
+
 <head>
   <meta charset="utf-8">
   <title>HawtioOnline</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="osconsole/config.js"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
